# ruspy

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
client/src/commands/: exec.rs  filesystem.rs  mod.rs  ping.rs  shell.rs  system.rs  webcam.rs
server/: Cargo.toml
server/src/: c2_state.rs  constants.rs  main.rs
server/src/commands/: mod.rs  ping.rs
server/src/commands/client/: control.rs  exec.rs  filesystem.rs  mod.rs  shell.rs  system.rs  webcam.rs
server/src/commands/server/: local.rs  mod.rs  sessions.rs
shared/src/: lib.rs  utils.rs
