[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
rfd = "0.15"
libc = "0.2"
xcap = "0.9.6"
tempfile = "3.27.0"
sysinfo = "0.39.3" 
nokhwa = { version = "0.10", features = ["input-native", "output-wgpu"] }
shared ={ path = "../shared" }

[target.'cfg(windows)'.dependencies]
quick-xml = "0.39.0"
is_elevated = "0.1.2"
windows = { version = "0.62.2", features = [
    "Win32_NetworkManagement_WiFi",
    "Win32_System_Com",
    "Win32_System_SecurityCenter"
]}